[gd_scene load_steps=7 format=3 uid="uid://kkv14ht1thvc"]

[ext_resource type="Script" path="res://level/levels/level.gd" id="1_7k5g0"]
[ext_resource type="PackedScene" uid="uid://dfxhqjadaltv2" path="res://player/player.tscn" id="1_2811j"]
[ext_resource type="PackedScene" uid="uid://c10l2j8rhwcwo" path="res://level/objects/level_start_end_points.tscn" id="2_o2ayb"]
[ext_resource type="PackedScene" uid="uid://cdabxg3row7g2" path="res://gui/ui_layer.tscn" id="3_ixjwf"]
[ext_resource type="PackedScene" uid="uid://u318l7vpvoc2" path="res://level/death_zone.tscn" id="4_1dkld"]
[ext_resource type="TileSet" uid="uid://bkioybqpuvup7" path="res://level/levels/terrain_tile_set.tres" id="4_10syw"]

[node name="Level" type="Node2D"]
script = ExtResource("1_7k5g0")
_player_scene = ExtResource("1_2811j")

[node name="UILayer" parent="." instance=ExtResource("3_ixjwf")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("4_10syw")
format = 2
layer_0/tile_data = PackedInt32Array(196611, 458752, 2, 131075, 458752, 1, 65539, 458752, 1, 3, 458752, 0, 196610, 458752, 2, 131074, 458752, 1, 65538, 458752, 1, 2, 458752, 0, 196609, 458752, 2, 131073, 458752, 1, 65537, 458752, 1, 1, 458752, 0, 196608, 458752, 2, 131072, 458752, 1, 65536, 458752, 1, 0, 458752, 0, 262143, 458752, 2, 196607, 458752, 1, 131071, 458752, 1, 65535, 458752, 0, 262142, 458752, 2, 196606, 458752, 1, 131070, 458752, 1, 65534, 458752, 0, 262141, 458752, 2, 196605, 458752, 1, 131069, 458752, 1, 65533, 458752, 0, 262140, 458752, 2, 196604, 458752, 1, 131068, 458752, 1, 65532, 458752, 0, 262139, 458752, 2, 196603, 458752, 1, 131067, 458752, 1, 65531, 458752, 0, 262138, 458752, 2, 196602, 458752, 1, 131066, 458752, 1, 65530, 458752, 0, 262137, 458752, 2, 196601, 458752, 1, 131065, 458752, 1, 65529, 589824, 1, 262136, 458752, 2, 196600, 458752, 1, 131064, 458752, 1, 65528, 458752, 1, 262135, 458752, 2, 196599, 458752, 1, 131063, 458752, 1, 65527, 458752, 1, 262134, 458752, 2, 196598, 458752, 1, 131062, 458752, 1, 65526, 458752, 1, 262133, 458752, 2, 196597, 458752, 1, 131061, 458752, 1, 65525, 458752, 1, 262132, 393216, 2, 196596, 393216, 1, 131060, 393216, 1, 65524, 393216, 1, -7, 524288, 1, -65543, 524288, 1, -131079, 524288, 1, -196615, 524288, 1, -262151, 524288, 1, -327687, 524288, 1, -393223, 524288, 1, -458759, 524288, 1, -524295, 524288, 1, -589831, 524288, 1, -655367, 524288, 1, -720903, 524288, 1, -786439, 524288, 1, -851975, 524288, 1, -917511, 524288, 1, -983047, 458752, 1, -1048583, 458752, 1, -1114119, 458752, 1, -1179655, 458752, 1, -1245191, 458752, 0, -8, 458752, 1, -65544, 458752, 1, -131080, 458752, 1, -196616, 458752, 1, -262152, 458752, 1, -327688, 458752, 1, -393224, 458752, 1, -458760, 458752, 1, -524296, 458752, 1, -589832, 458752, 1, -655368, 458752, 1, -720904, 458752, 1, -786440, 458752, 1, -851976, 458752, 1, -917512, 458752, 1, -983048, 458752, 1, -1048584, 458752, 1, -1114120, 458752, 1, -1179656, 458752, 1, -1245192, 458752, 0, -9, 458752, 1, -65545, 458752, 1, -131081, 458752, 1, -196617, 458752, 1, -262153, 458752, 1, -327689, 458752, 1, -393225, 458752, 1, -458761, 458752, 1, -524297, 458752, 1, -589833, 458752, 1, -655369, 458752, 1, -720905, 458752, 1, -786441, 458752, 1, -851977, 458752, 1, -917513, 458752, 1, -983049, 458752, 1, -1048585, 458752, 1, -1114121, 458752, 1, -1179657, 458752, 1, -1245193, 458752, 0, -10, 458752, 1, -65546, 458752, 1, -131082, 458752, 1, -196618, 458752, 1, -262154, 458752, 1, -327690, 458752, 1, -393226, 458752, 1, -458762, 458752, 1, -524298, 458752, 1, -589834, 458752, 1, -655370, 458752, 1, -720906, 458752, 1, -786442, 458752, 1, -851978, 458752, 1, -917514, 458752, 1, -983050, 458752, 1, -1048586, 458752, 1, -1114122, 458752, 1, -1179658, 458752, 1, -1245194, 458752, 0, -11, 458752, 1, -65547, 458752, 1, -131083, 458752, 1, -196619, 458752, 1, -262155, 458752, 1, -327691, 458752, 1, -393227, 458752, 1, -458763, 458752, 1, -524299, 458752, 1, -589835, 458752, 1, -655371, 458752, 1, -720907, 458752, 1, -786443, 458752, 1, -851979, 458752, 1, -917515, 458752, 1, -983051, 458752, 1, -1048587, 458752, 1, -1114123, 458752, 1, -1179659, 458752, 1, -1245195, 458752, 0, -12, 393216, 1, -65548, 393216, 1, -131084, 393216, 1, -196620, 393216, 1, -262156, 393216, 1, -327692, 393216, 1, -393228, 393216, 1, -458764, 393216, 1, -524300, 393216, 1, -589836, 393216, 1, -655372, 393216, 1, -720908, 393216, 1, -786444, 393216, 1, -851980, 393216, 1, -917516, 393216, 1, -983052, 393216, 1, -1048588, 393216, 1, -1114124, 393216, 1, -1179660, 393216, 1, -1245196, 393216, 0, -1179641, 524288, 1, -1245177, 524288, 1, -1310713, 524288, 0, -1179642, 458752, 1, -1245178, 458752, 1, -1310714, 458752, 0, -1179643, 458752, 1, -1245179, 458752, 1, -1310715, 458752, 0, -1179644, 458752, 1, -1245180, 458752, 1, -1310716, 458752, 0, -1179645, 458752, 1, -1245181, 458752, 1, -1310717, 458752, 0, -1179646, 458752, 1, -1245182, 458752, 1, -1310718, 458752, 0, -1179647, 458752, 1, -1245183, 458752, 1, -1310719, 458752, 0, -1179648, 458752, 1, -1245184, 458752, 1, -1310720, 458752, 0, -1114113, 458752, 1, -1179649, 458752, 1, -1245185, 458752, 0, -1114114, 458752, 1, -1179650, 458752, 1, -1245186, 458752, 0, -1114115, 458752, 1, -1179651, 458752, 1, -1245187, 458752, 0, -1114116, 458752, 1, -1179652, 458752, 1, -1245188, 458752, 0, -1114117, 458752, 1, -1179653, 458752, 1, -1245189, 458752, 0, -1114118, 458752, 1, -1179654, 458752, 1, -1245190, 458752, 0, -1114105, 524288, 1, -1114106, 458752, 1, -1114107, 458752, 1, -1114108, 458752, 1, -1114109, 458752, 1, -1114110, 458752, 1, -1114111, 458752, 1, -1114112, 458752, 1, -1048577, 458752, 1, -1048578, 458752, 1, -1048579, 458752, 1, -1048580, 458752, 1, -1048581, 458752, 1, -1048582, 458752, 1, -1048569, 524288, 2, -1048570, 458752, 2, -1048571, 458752, 2, -1048572, 458752, 2, -1048573, 458752, 2, -1048574, 458752, 2, -1048575, 458752, 2, -1048576, 458752, 2, -983041, 458752, 2, -983042, 458752, 2, -983043, 458752, 2, -983044, 458752, 2, -983045, 458752, 2, -983046, 458752, 2, 196615, 524288, 2, 131079, 524288, 1, 65543, 524288, 1, 7, 524288, 0, 196614, 458752, 2, 131078, 458752, 1, 65542, 458752, 1, 6, 458752, 0, 196613, 458752, 2, 131077, 458752, 1, 65541, 458752, 1, 5, 458752, 0, 196612, 458752, 2, 131076, 458752, 1, 65540, 458752, 1, 4, 458752, 0)

[node name="LevelStartEndPoints" parent="." instance=ExtResource("2_o2ayb")]

[node name="StartPoint" parent="LevelStartEndPoints" index="0"]
position = Vector2(0, 0)

[node name="EndPoint" parent="LevelStartEndPoints" index="1"]
position = Vector2(704, 0)

[node name="Objects" type="Node2D" parent="."]

[node name="Traps" type="Node2D" parent="."]

[node name="Pickups" type="Node2D" parent="."]

[node name="DeathZone" parent="." instance=ExtResource("4_1dkld")]
position = Vector2(0, 150)

[editable path="LevelStartEndPoints"]
